[s7Ob7Zm7] 4.x changes