@@ -1,3 +1,21 @@
+/*
+ * Copyright (c) "Neo4j"
+ * Neo4j Sweden AB [http://neo4j.com]
+ *
+ * This file is part of Neo4j.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package apoc.export;
 
 import apoc.ApocConfig;
@@ -85,7 +103,7 @@ public class ImportAndLoadCoreSecurityTest {
         // transform `Pair(<KEY>, <VALUE>)` to `Pair(apoc.load.<KEY> , <VALUE>)`
         List<Pair<String, String>> loadProcedures = LOAD_PROCEDURES
                 .map(e -> Pair.of( "apoc.load." + e.getLeft() , e.getRight() ))
-                .toList();
+                .collect(Collectors.toList());
 
         importAndLoadProcedures.addAll(loadProcedures);
 
@@ -111,7 +129,7 @@ public class ImportAndLoadCoreSecurityTest {
                         .map(
                             procPair -> new String[] { procPair.getLeft(), procPair.getRight(), fileName }
                         )
-                ).toList();
+                ).collect(Collectors.toList());
     }
 
     @ClassRule
@@ -261,7 +279,9 @@ public class ImportAndLoadCoreSecurityTest {
                             (r) -> {}
                     )
             );
-            assertTrue(e.getMessage().contains("access to /127.168.0.0 is blocked via the configuration property internal.dbms.cypher_ip_blocklist"));
+            String msg = e.getMessage();
+            assertTrue("Actual error is: " + msg,
+                    msg.contains("access to /127.168.0.0 is blocked via the configuration property unsupported.dbms.cypher_ip_blocklist"));
         });
     }
 
